--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,7 +8,7 @@ $tablet: 768px;
 
 :root {    
     --textColor :rgb(20, 20, 20);
-    --backgroundColor: rgb(203, 211, 255);
+    --backgroundColor: rgb(196, 205, 255);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -25,7 +25,8 @@ html {
     }
 
     .my-body {
-        background-image: linear-gradient(
+        background: var(--backgroundColor);
+            /*background-image: linear-gradient(
             180deg,
             hsl(216, 100%, 96%) 0%,
             hsl(218, 100%, 93%) 13%,
@@ -34,7 +35,7 @@ html {
             hsl(219, 91%, 77%) 47%,
             hsl(221, 97%, 74%) 57%,
             hsl(223, 96%, 70%) 68%,);
-            font-family: "Rubik", sans-serif;
+            font-family: "Rubik", sans-serif;*/
         }
 
 .footer {    
@@ -109,14 +110,14 @@ html {
     color: var(--textColor);
     padding: 1rem;
     &__header {       
-        color: $textColor;
+        color: var(--textColor);
         &::before {
             content: "🍎";}
      }
     &__list {
         list-style-type: circle;}
     &__paragraph {
-        
+        color: var(--textColor);
         border-radius: 8px;
         padding: 8px;
         line-height: 1.75;
@@ -125,7 +126,7 @@ html {
     }    
 }
 .page-header {
-    color: rgb(0, 0, 189);
+    color: var(--textColor);
     padding: 8px;
     &__button {
         background: blue;
